website/i18n/pt-BR/docusaurus-plugin-content-docs/version-0.1.0/reference/invowkfile-schema.mdx
---
sidebar_position: 2
---

import Snippet from '@site/src/components/Snippet';

# Referência de Schema do Invowkfile

:::warning Alpha — Schema Pode Mudar
O schema do invowkfile ainda está evoluindo. Campos, tipos e regras de validação **podem mudar entre releases** enquanto estabilizamos o formato. Sempre verifique o [changelog](https://github.com/invowk/invowk/releases) ao fazer upgrade.
:::

Referência completa para o schema do invowkfile. Invowkfiles usam formato [CUE](https://cuelang.org/) para definir comandos.
Invowkfiles são validados como structs fechadas, então campos desconhecidos geram erro de validação.

## Estrutura Raiz

Todo invowkfile deve definir ao menos um comando em `cmds`:

<Snippet id="reference/invowkfile/root-structure" />

:::note Metadados do Módulo Ficam em invowkmod.cue
Campos como `module`, `version`, `description` e `requires` pertencem a `invowkmod.cue` e são rejeitados em `invowkfile.cue`.
:::

### default_shell

**Tipo:** `string`  
**Obrigatório:** Não  
**Padrão:** Padrão do sistema

Sobrescreve o shell padrão para execução no runtime native.

<Snippet id="reference/invowkfile/default-shell-example" />

### workdir

**Tipo:** `string`  
**Obrigatório:** Não  
**Padrão:** Diretório do invowkfile

Diretório de trabalho padrão para todos os comandos. Pode ser absoluto ou relativo à localização do invowkfile.

<Snippet id="reference/invowkfile/workdir-example" />

### env

**Tipo:** `#EnvConfig`  
**Obrigatório:** Não

Configuração de environment global aplicada a todos os comandos. Veja [EnvConfig](#envconfig).

### depends_on

**Tipo:** `#DependsOn`  
**Obrigatório:** Não

Dependências globais que se aplicam a todos os comandos. Veja [DependsOn](#dependson).

### cmds

**Tipo:** `[...#Command]`  
**Obrigatório:** Sim (pelo menos um)

Lista de comandos definidos neste invowkfile. Veja [Command](#command).

---

## Command

Define um comando executável:

<Snippet id="reference/invowkfile/command-structure" />

### name

**Tipo:** `string` (padrão: `^[a-zA-Z][a-zA-Z0-9_ -]*$`)  
**Obrigatório:** Sim

O identificador do comando. Deve começar com uma letra.

<Snippet id="reference/invowkfile/command-name-examples" />

### description

**Tipo:** `string`  
**Obrigatório:** Não

Texto de ajuda para o comando.

<Snippet id="reference/invowkfile/command-description-example" />

### implementations

**Tipo:** `[...#Implementation]`  
**Obrigatório:** Sim (pelo menos um)

As implementations executáveis. Veja [Implementation](#implementation).

### flags

**Tipo:** `[...#Flag]`  
**Obrigatório:** Não

Flags de linha de comando para este comando. Veja [Flag](#flag).

:::warning Flags Reservadas
As seguintes flags são reservadas pelo invowk e não podem ser usadas em comandos definidos pelo usuário:
- `env-file` (curta `e`), `env-var` (curta `E`)
- `env-inherit-mode`, `env-inherit-allow`, `env-inherit-deny`
- `workdir` (curta `w`), `help` (curta `h`), `runtime` (curta `r`)
- `from` (curta `f`), `force-rebuild`, `version`
- Os prefixos `ivk-`, `invowk-` e `i-` também são reservados para flags do sistema
:::

### args

**Tipo:** `[...#Argument]`  
**Obrigatório:** Não

Argumentos posicionais para este comando. Veja [Argument](#argument).

---

## Implementation

Define como um comando é executado:

<Snippet id="reference/invowkfile/implementation-structure" />

### script

**Tipo:** `string` (não vazio)  
**Obrigatório:** Sim

Os comandos de shell a executar OU um caminho para um arquivo de script.

<Snippet id="reference/invowkfile/script-examples" />

**Extensões reconhecidas:** `.sh`, `.bash`, `.ps1`, `.bat`, `.cmd`, `.py`, `.rb`, `.pl`, `.zsh`, `.fish`

### runtimes

**Tipo:** `[...#RuntimeConfig]`  
**Obrigatório:** Sim (pelo menos um)

Os runtimes que podem executar esta implementation. O primeiro runtime é o padrão.

<Snippet id="reference/invowkfile/runtimes-examples" />

### platforms

**Tipo:** `[...#PlatformConfig]`
**Obrigatório:** Sim (pelo menos um)

Especifique quais sistemas operacionais esta implementation suporta.

<Snippet id="reference/invowkfile/platforms-example" />

---

## RuntimeConfig

Configuração para um runtime específico:

<Snippet id="reference/invowkfile/runtime-config-structure" />

### name

**Tipo:** `"native" | "virtual" | "container"`  
**Obrigatório:** Sim

O tipo de runtime.

### interpreter

**Tipo:** `string`  
**Disponível para:** `native`, `container`  
**Padrão:** `"auto"` (detectar do shebang)

Especifica como executar o script.

<Snippet id="reference/invowkfile/interpreter-examples" />

:::note
O runtime virtual usa mvdan/sh e não consegue executar interpretadores não-shell.
:::

### env_inherit_mode

**Tipo:** `"none" | "allow" | "all"`  
**Disponível para:** `native`, `virtual`, `container`  
**Padrão:** `all` para native/virtual, `none` para container

Controla se o ambiente do host é herdado pelo runtime.

### env_inherit_allow

**Tipo:** `[...string]`  
**Disponível para:** `native`, `virtual`, `container`

Lista de variáveis de ambiente permitidas quando `env_inherit_mode` é `"allow"`.

### env_inherit_deny

**Tipo:** `[...string]`  
**Disponível para:** `native`, `virtual`, `container`

Lista de variáveis de ambiente negadas (aplica-se a qualquer modo).

<Snippet id="reference/invowkfile/env-inherit-example" />

### enable_host_ssh

**Tipo:** `bool`  
**Disponível para:** `container`  
**Padrão:** `false`

Habilita acesso SSH do container de volta para o host. Quando habilitado, o Invowk inicia um servidor SSH e fornece credenciais via variáveis de ambiente:

- `INVOWK_SSH_HOST`
- `INVOWK_SSH_PORT`
- `INVOWK_SSH_USER`
- `INVOWK_SSH_TOKEN`

<Snippet id="reference/invowkfile/enable-host-ssh-example" />

### containerfile / image

**Tipo:** `string`  
**Disponível para:** `container`

Especifique a origem do container. São **mutuamente exclusivos**.

<Snippet id="reference/invowkfile/containerfile-image-examples" />

### volumes

**Tipo:** `[...string]`  
**Disponível para:** `container`

Montagens de volume no formato `host:container[:options]`.

<Snippet id="reference/invowkfile/volumes-example" />

### ports

**Tipo:** `[...string]`  
**Disponível para:** `container`

Mapeamentos de portas no formato `host:container`.

<Snippet id="reference/invowkfile/ports-example" />

---

## PlatformConfig

<Snippet id="reference/invowkfile/platform-config-structure" />

---

## EnvConfig

Configuração de environment:

<Snippet id="reference/invowkfile/env-config-structure" />

### files

Arquivos dotenv para carregar. Arquivos são carregados em ordem; os últimos sobrescrevem os anteriores.

<Snippet id="reference/invowkfile/env-files-example" />

### vars

Variáveis de ambiente como pares chave-valor.

<Snippet id="reference/invowkfile/env-vars-example" />

---

## DependsOn

Especificação de dependências:

<Snippet id="reference/invowkfile/depends-on-structure" />

### ToolDependency

<Snippet id="reference/invowkfile/tool-dependency-structure" />

<Snippet id="reference/invowkfile/tool-dependency-example" />

### CommandDependency

<Snippet id="reference/invowkfile/command-dependency-structure" />

### FilepathDependency

<Snippet id="reference/invowkfile/filepath-dependency-structure" />

### CapabilityDependency

<Snippet id="reference/invowkfile/capability-dependency-structure" />

### EnvVarDependency

<Snippet id="reference/invowkfile/env-var-dependency-structure" />

### CustomCheckDependency

<Snippet id="reference/invowkfile/custom-check-dependency-structure" />

---

## Flag

Definição de flag de linha de comando:

<Snippet id="reference/invowkfile/flag-structure" />

<Snippet id="reference/invowkfile/flag-example" />

---

## Argument

Definição de argumento posicional:

<Snippet id="reference/invowkfile/argument-structure" />

<Snippet id="reference/invowkfile/argument-example" />

**Variáveis de ambiente para argumentos:**
- `INVOWK_ARG_<NAME>` - O valor do argumento
- Para variádicos: `INVOWK_ARG_<NAME>_COUNT`, `INVOWK_ARG_<NAME>_1`, `INVOWK_ARG_<NAME>_2`, etc.

---

## Exemplo Completo

<Snippet id="reference/invowkfile/complete-example" />
